--- a/src/views/MyProjects/ProjectCard/projectCard.css
+++ b/src/views/MyProjects/ProjectCard/projectCard.css
@@ -80,7 +80,7 @@
 @media (min-width: 360px) and (max-width: 1023px), (max-height: 640px) {
 	.project {
 		width: 20rem;
-		height: 29rem;
+		height: 30rem;
 	}
 
 	.project .links {
