--- a/src/views/MyProjects/projects.css
+++ b/src/views/MyProjects/projects.css
@@ -34,3 +34,9 @@
 		padding: 1.5rem 0;
 	}
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (min-height: 1024px) {
+	.projects h2 {
+		padding: 3rem;
+	}
+}
