--- a/src/views/Technologies/technologies.css
+++ b/src/views/Technologies/technologies.css
@@ -39,3 +39,9 @@
 		margin-bottom: 2rem;
 	}
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (min-height: 1024px) {
+	.technologies {
+		height: 35vh;
+	}
+}
